fixed dark mode issues

--- a/main.css
+++ b/main.css
@@ -193,11 +193,12 @@ select
   margin-left: auto;
   font-size: medium;
   font-family: 'Open Sans', system-ui, 'Helvetica Neue', sans-serif;
-  color:black;
   opacity:100%;
   margin-right:3px;
   display:block;
   text-align: center;
+  border-radius: 2ex;
+  margin-bottom: 3px;
 }
 
 
